--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajv": "^6.0.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "popper.js": "^1.14.5",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-paginate": "^3.6.0",
+    "vue-router": "^3.0.1",
+    "vuejs-paginate": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
