--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.10",
+    "@fortawesome/vue-fontawesome": "^0.1.3",
     "ajv": "^6.0.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
