--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^4.1.3",
     "popper.js": "^1.14.5",
     "vue": "^2.5.2",
+    "vue-cropperjs": "^3.0.0",
     "vue-paginate": "^3.6.0",
     "vue-router": "^3.0.1",
     "vuejs-paginate": "^2.0.1"
