--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "popper.js": "^1.14.5",
+    "v-distpicker": "^1.0.21",
     "vue": "^2.5.2",
     "vue-cropperjs": "^3.0.0",
     "vue-paginate": "^3.6.0",
