--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "ajv": "^6.0.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "froala-editor": "^2.9.1",
     "popper.js": "^1.14.5",
     "v-distpicker": "^1.0.21",
     "vue": "^2.5.2",
     "vue-cropperjs": "^3.0.0",
+    "vue-froala-wysiwyg": "^2.9.1",
     "vue-paginate": "^3.6.0",
     "vue-router": "^3.0.1",
     "vuejs-paginate": "^2.0.1"
